@@ -61,6 +61,6 @@ advice from friends like these:
  Fred Machado, Ken Hirsch, Keshav Krity, Patrick Monnerat, Mark Karpeles,
  Anthony Bryan, Peter Korsgaard, Phil Lisiecki, Bas Mevissen, Rob Crittenden,
  Emil Romanus, Karl Moerder, Daniel Black, Stefan Teleman, Michael Wallner,
- Grant Erickson
+ Grant Erickson, Tim Ansell
 
         Thanks! (and sorry if I forgot to mention someone)
